--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -48,6 +48,8 @@ assetic:
         cssrewrite: ~
         scssphp:
             formatter: 'Leafo\ScssPhp\Formatter\Compressed'
+        autoprefixer:
+            apply_to:   '\.css$'
 
 # Twig Configuration
 twig:
