Added capacity to players + Fixed problem on skill div in show_content

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -14,6 +14,7 @@ imports:
 parameters:
     locale: fr
     app.path.job_icons: /uploads/images/job
+    assetic.filter.autoprefixer.bin: /usr/bin/autoprefixer-cli
 
 framework:
     #esi:             ~
