Added link and macro on skill

--- a/src/CharacterBundle/Resources/config/doctrine/ActiveSkill.orm.yml
+++ b/src/CharacterBundle/Resources/config/doctrine/ActiveSkill.orm.yml
@@ -12,4 +12,8 @@ CharacterBundle\Entity\ActiveSkill:
             type: string
             length: 255
             nullable: true
+        macro:
+            type: string
+            length: 255
+            nullable: true
     lifecycleCallbacks: {  }
