--- a/src/CharacterBundle/Resources/config/form_services.yml
+++ b/src/CharacterBundle/Resources/config/form_services.yml
@@ -26,3 +26,9 @@ services:
             - '%spell_levels%'
         tags:
             - { name: form.type }
+    stat.type:
+        class: CharacterBundle\Form\StatChoiceType
+        arguments:
+            - '%basic_stats%'
+        tags:
+            - { name: form.type }
