--- a/src/CharacterBundle/Resources/config/form_services.yml
+++ b/src/CharacterBundle/Resources/config/form_services.yml
@@ -32,3 +32,9 @@ services:
             - '%basic_stats%'
         tags:
             - { name: form.type }
+    status.type:
+        class: CharacterBundle\Form\StatusTypeChoiceType
+        arguments:
+            - '%status.types%'
+        tags:
+            - { name: form.type }
